fix some formatting

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -45,11 +45,15 @@ Oscilloscopes and XY plots can get very busy when multiple signals are added. We
 </p>
 
 These colors can be customized in setting.ini
+```
 [Options]
-DisinctColors= 0xe6194b, 0x3cb44b, 0xffe119, 0x4363d8, 0xf58231, 0x911eb4, 0x46f0f0, 0xf032e6, 0xbcf60c, 0xfabebe, 0x008080, 0xe6beff, 0x9a6324, 0xfffac8, 0x800000, 0xaaffc3, 0x808000, 0xffd8b1, 0x000075, 0x808080, 0xffffff, 0x000000
+DisinctColors= 0xe6194b, 0x3cb44b, 0xffe119, 0x4363d8, 0xf58231, 0x911eb4, 0x46f0f0, 0xf032e6, 0xbcf60c, 0xfabebe, 0x008080, 0xe6beff, 0x9a6324, 0xfffac8, 0x800000, 0xaaffc3, 0x808000, 0xffd8b1, 0x000075, 0x808080, 0xffffff, 0x000000__
+```
 
 Here’s an alternative set of colors:
+```
 DistinctColors=0xa6cee3, 0x1f78b4, 0xb2df8a, 0x33a02c, 0xfb9a99, 0xe31a1c, 0xfdbf6f, 0xff7f00, 0xcab2d6, 0x6a3d9a, 0x8dd3c7, 0xffffb3, 0xbebada, 0xfb8072, 0x80b1d3, 0xfdb462, 0xb3de69, 0xfccde5, 0xd9d9d9, 0xbc80bd, 0xffffff, 0x000000
+```
 
 ### [.mf4 Support](#mfr-file-support)
 Support for MF4 ASAM files has been added.
@@ -84,17 +88,18 @@ Math functions support _var_ & _local_ variables
 
 Example #1:
 calculate the average wheel speed over a file
-
+```
 var wheelSpeedSum
 var wheelSpeedCount
 Local wheelSpeedAve := (vwheel_fl + vwheel_fr) / 2
 wheelSpeedSum := wheelSpeedSum + wheelSpeedAve
 wheelSpeedCount := wheelSpeedCount + 1
 wheelSpeedSum / WheelSpeedCount
+```
 
 Example #2:
 You can even use script blocks within any other function argument. Simple put your expressions within “begin” and “end”
-
+```
 var wheelSpeedSum
 var  wheelSpeedCount
 If (nmot >= 5000; 
@@ -104,7 +109,7 @@ If (nmot >= 5000;
     wheelSpeedCount := wheelSpeedCount + 1
   end; 0)
 wheelSpeedSum / WheelSpeedCount
-
+```
 ### [COMAPI Can Create New Measurment Files](#comapi-can-create-new-measurment-files)
 * An 3rd party application/plugin can use the UserDataFile class to create new measurement files with application generated channel data.
 * Files created with the new API are written in WinDarab file format v2 which is supported since WinDarab v7.6.
@@ -237,7 +242,7 @@ Hereby the first keyword argument (Inactive/Rising|Active|Falling) is always opt
 DetectEvent with 6 Arguments
 
     DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; **<BeginDelay>**; <EndCondition>; <EndDuration>; **<EndDelay>**)
-
+M
 DetectEvent with 5 Arguments
 
     DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; **<BeginDelay>**; -<EndCondition>-; <EndDuration>; **<EndDelay>**)
