--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -117,7 +117,7 @@ wheelSpeedSum / WheelSpeedCount
 
 ### [Outing Report Emphasized Values](#outing-report-emphasized-vaues)
 * In 2017 we added a feature to emphasize min/max values in the outing report using different colors. A “wanted side effect” of this coloration is also the result determination of the lap/total values (lap values, if a racetrack segmentation is used to evaluate the segment min/max values).
-* If a column is configured to show the minumum value, previous WinDarab versions used to show the “maximum value of the segment miniumum values”, if If both are emphasized by colorization. NOW the “total minimum” is used!
+* If a column is configured to show the minumum value, previous WinDarab versions used to show the “maximum value of the segment miniumum values”, if both are emphasized by colorization. NOW the “total minimum” is used!
 * If a column is configured to show something else as the minumum value, the “maximum value of all sub values” was taken – this behavior wasn’t changed.
 * Another issue was the setting dialog: The default color settings default to emphasize the maximum value – even if the column function “Minimum” is selected. Because it makes more sense to emphasize the total minimum it this case, we changed the settings dialog:
 Now the colors for Minimum and Maximum value are swapped, if no colorization is configured for the minimum value – and swapped back if the function is again changed to another function expect “Minimum”
@@ -128,7 +128,10 @@ Now the colors for Minimum and Maximum value are swapped, if no colorization is 
 * Also all analysis windows (should) work correctly, if they meet a “NoValue”.
 * Note: All comparisions with NoValue will returns false (NoValue is internally a NaN double value)
 * Here’s a sample expression:
-    if (nmot > 6000; nmot; NoValue)
+    ```
+	if (nmot > 6000; nmot; NoValue)
+	```
+
 This channel will show only a signal, if nmot is larger than 6000 – anywhere else there’s nothing!
 
 ### [x-y-Plot: Toggle between <auto> and absolute x-y-z-axis limits](#x-y-plot-toggle-between-auto-and-absolure)
@@ -176,26 +179,41 @@ Following restrictions are still valid:
 * WinDarab now allows to “ignore” / ”hide” lap triggers created by the recording hardware. To ignore a lap trigger simply use “Delete laptrigger” from the context menu / ribbon menu.
 * Hidden hardware lap triggers can be restored in the “Lap trigger” dialog (-> ribbon). Hidden hardware triggers are shown in red using an italic font.
 * Note: This feature is not yet fully implemented/tested. Especially distance normalization for linked files lacks, because WinDarab used some optimizations in the past which cannot handle deleted hardware triggers in correctly. But the feature can be used for single files (e.g. if data was converted with “one file per outing”).
+<p align="center">
+<img src="images/Delete Hardware Lap Triggers.jpg">
+</p>
 
 ### [New Math Functions](#new-math-functions)
 * The math function “ValueAtDist” was added:
+```
     ValueAtDist(<channel>; <dist> [; <LapIndex>])
+```
 ** If <LapIndex> is omitted, <dist> is the absolute distance value within the file. 
+```
     ValueAtDist(<channel>; <xdist>-10) returns the value 10m before the current position.
+```
 ** If <LapIndex> is given, the <dist> argument is a lap distance value.
+```
     ValueAtDist(<channel>; 100; LapIndex) returns the value at position 100m of the current lap.
     ValueAtDist(<channel>; lapdist; LapIndex-1) returns the value at the lap position but in the previous lap
-
+```
 * The math function “ValueAtTime” was extended accordingly to ValueAtDist:
+```
     ValueAtTime(<channel>; <time> [; <LapIndex>])
+```
 ** If <LapIndex> is omitted, <time> is the absolute time value within the file. 
+```
     ValueAtTime(<channel>; <xtime>-10) returns the value 10sec before the current position.
+```
 ** If <LapIndex> is given, the <time> argument is a lap time value.
+```
     ValueAtDist(<channel>; 10; LapIndex) returns the value at position 10sec of the current lap.
     ValueAtDist(<channel>; laptime; LapIndex-1) returns the value at the same laptime position but in the previous lap
-
+```
 Note: WinDarab optimizes the following usage pattern of ValueAtTime
-    ValueAtTime(<channel>; xtime-<delta>)
+```
+ ValueAtTime(<channel>; xtime-<delta>)
+```
 In this case WinDarab doesn’t calculate a “real” math channel. Instead WinDarab shifts the timeline accordingly and passes the channel data through – this is almost like accessing the original channel!
 
 ### [Alias Channels Can Contain Variable Parts](#alias-channels-can-contain-variable-parts)
@@ -205,11 +223,17 @@ In this case WinDarab doesn’t calculate a “real” math channel. Instead Win
 
 E.g.:
  You want alias channels wheelspeed_fl, wheelspeed_fr, …
+ 
  Now you can create an alias channel definition named “wheelspeed_[fl,fr]”
+ 
  And give the following member channels:
+ 
      vspeed_[fl,fr]
+	 
      vwheel_[fl,fr]
+	 
      vspeed_[0..1]
+	 
 
 ### [Setupsheets & Telemetry](#setupsheets-and-telemetry)
 Now setupsheets can also be configured for telemetry streams. The setupsheet file (setupsheet.xml) has to be located in the folder ...\Config\WDServer”.
@@ -224,10 +248,10 @@ Now setupsheets can also be configured for telemetry streams. The setupsheet fil
 * To hide an overlay use the overlay context menu in the file explorer. An overlay is shown again, if you select the same context menu item or – simly – by clicking into the overlay column to select a lap.
 Alternatively you can use the “Hide” context menu in the oscilloscope (“H” key).
 * What happens, if an overlay is hidden:
-** The oscilloscope hide all channel of hidden overlays
-** The trackmap doesn’t show the position of the car.
-** All analysis windows hide the evaluation results of hidden overlays (except LapAnalysis)
-** As long as an overlay is hidden most calculations for the attached files are stopped/disabled.
+  * The oscilloscope hide all channel of hidden overlays
+  * The trackmap doesn’t show the position of the car. 
+  * All analysis windows hide the evaluation results of hidden overlays (except LapAnalysis)
+  * As long as an overlay is hidden most calculations for the attached files are stopped/disabled.
 Only “Event rules” and “LapAnalysis” is still evaluated.
 
 ### [Detect Event Supports Multiple Overloads](#detect-event-supports-multiple-overloads)
@@ -241,8 +265,8 @@ Hereby the first keyword argument (Inactive/Rising|Active|Falling) is always opt
 
 DetectEvent with 6 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; **<BeginDelay>**; <EndCondition>; <EndDuration>; **<EndDelay>**)
-M
+    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; <del><BeginDelay></del>; <EndCondition>; <EndDuration>; **<EndDelay>**)
+
 DetectEvent with 5 Arguments
 
     DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; **<BeginDelay>**; -<EndCondition>-; <EndDuration>; **<EndDelay>**)
