fix strikethroughs in code blocks

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -257,32 +257,32 @@ Only “Event rules” and “LapAnalysis” is still evaluated.
 ### [Detect Event Supports Multiple Overloads](#detect-event-supports-multiple-overloads)
 * Two additional arguments “BeginDelay” and “EndDelay” were added to DetectEvent. With these arguments DetectEvent delays state changes by the given amount of time.
 * The two arguments are optional and don’t change the signature of the “old” DetectEvent:
-
+```
 DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; <BeginDelay>; <EndCondition>; <EndDuration>; <EndDelay>)
-
+```
 * The kind of the arguments are actually controlled by the given number of arguments.
 Hereby the first keyword argument (Inactive/Rising|Active|Falling) is always optional and is NOT counted as an argument!
 
 DetectEvent with 6 Arguments
 
-<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &larr;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; &lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>)</code></pre>
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; &lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>)</code></pre>;
 
 DetectEvent with 5 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; **<BeginDelay>**; -<EndCondition>-; <EndDuration>; **<EndDelay>**)
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; -&lt;EndCondition&gt;-; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>)</code></pre>
 
 DetectEvent with 4 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; -<BeginDelay>-; <EndCondition>; <EndDuration>; -<EndDelay>-)
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;-; &lt;EndCondition&gt;; &lt;EndDuration&gt;; -&lt;EndDelay&gt;</del>)</code></pre>
 
 DetectEvent with 3 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; -<BeginDelay>-; -<EndCondition>-; <EndDuration>; -<EndDelay>-)
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;-; -&lt;EndCondition&gt;-; &lt;EndDuration&gt;; -&lt;EndDelay&gt;</del>)</code></pre>
 
 DetectEvent with 2 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; <BeginDuration>; -<BeginDelay>; <EndCondition>; <EndDuration>; <EndDelay>-)
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;; &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>)</code></pre>
 
 DetectEvent with 1 Arguments
 
-    DetectEvent(Inactive|Rising|Active|Falling; <BeginCondition>; -<BeginDuration>; <BeginDelay>; <EndCondition>; <EndDuration>; <EndDelay>-)
+<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; <del>&lt;BeginDuration&gt;; &lt;BeginDelay&gt;; &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>)</code></pre>
