--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -265,7 +265,11 @@ Hereby the first keyword argument (Inactive/Rising|Active|Falling) is always opt
 
 DetectEvent with 6 Arguments
 
-<pre><code>DetectEvent(Inactive|Rising|Active|Falling; &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; &lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>)</code></pre>;
+<pre><code>DetectEvent(
+Inactive|Rising|Active|Falling; 
+&lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; 
+&lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>
+)</code></pre>;
 
 DetectEvent with 5 Arguments
 
