clean up the multiline stuff a bit

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -267,16 +267,16 @@ DetectEvent with 6 Arguments
 
 <pre><code>DetectEvent(
     Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>;  
-    &lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;;  
+    &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;
 )</code></pre>;
 
 DetectEvent with 5 Arguments
 
 <pre><code>DetectEvent(
     Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; 
-    <del>&lt;EndCondition&gt;</del>; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;; 
+    <del>&lt;EndCondition&gt;</del>; &lt;EndDuration&gt;; &lt;EndDelay&gt;
 )</code></pre>
 
 DetectEvent with 4 Arguments
@@ -299,14 +299,14 @@ DetectEvent with 2 Arguments
 
 <pre><code>DetectEvent(
     Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;; 
-    &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;; </del>
+    </del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
 )</code></pre>
 
 DetectEvent with 1 Arguments
 
 <pre><code>DetectEvent(
     Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; <del>&lt;BeginDuration&gt;; &lt;BeginDelay&gt;; 
-    &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
+    &lt;BeginCondition&gt;; <del>&lt;BeginDuration&gt;; &lt;BeginDelay&gt;; </del>
+    <del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
 )</code></pre>
