--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -300,7 +300,7 @@ DetectEvent with 2 Arguments
 <pre><code>DetectEvent(
     Inactive|Rising|Active|Falling; 
     &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;; </del>
-    </del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
+    <del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
 )</code></pre>
 
 DetectEvent with 1 Arguments
