Added clarity to some topics

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -140,6 +140,9 @@ This channel will show only a signal, if nmot is larger than 6000 – anywhere e
 ### [Worksheet items can be arranged](#worksheet-items-can-be-arranged)
 * In the “Windows” ribbon category we added the function “Tile controls” to tile all worksheet controls on the current worksheet.
 * The function is also available, if you open the context menu of the worksheet control caption/border.
+<p align="center">
+<img src="images/Windows Ribbon Tile Controls.jpg">
+</p>
 
 ### [Math Inspector Improvement](#math-inspector-improvement)
 * The upper pane shows the value tree.
@@ -155,6 +158,9 @@ This channel will show only a signal, if nmot is larger than 6000 – anywhere e
 * A second click on “Selected channel” REMOVES the automatic y-axis.
 * If a channel is dropped onto an automatic y-axis, the y-axis is a normal axis for the channel.
 * Note: A automatic axis always fills the complete height of the y-axis area and cannot be changed (height or vertical position).
+<p align="center">
+<img src="images/Oscilloscope Automatic Y Axis.jpg">
+</p>
 
 ### [Less Restrictions on Linked Files](#less-restrictions-on-linked-files)
 * New in WinDarab is the support to open different files as a linked file – even the recording configurations are different:
@@ -169,11 +175,11 @@ Following restrictions are still valid:
 
 
 ### [Instrument Panel Improvement](#instrument-panel-improvement)
-* Instrument panel allow to select multiple gauges by pressing the Ctrl + Left or using a rubberband.
+* Instrument panel allow to select multiple gauges by pressing the **Ctrl + Left Click** or using a rubberband.
 * The location and size of all selected gauges can be adjusted in a single step.
 * Copy and paste of the selected gauges is supported
 * The layout grid is removed. Now the borders of the gauges act as magnetic lines making it easy to align/adjust gauges.
-* If multiple gauges are selected, the arrow keys can be used to move the gauges by pixel (without snapping to the magnetic lines). Additionally the arrow keys can be used with Shift to align all gauges to the top, left, bottom or right border, together with Ctrl the size can be adjusted (Ctrl+right, Ctrl+bottom) or aligned and sized (Ctrl+left, Ctrl+top)
+* If multiple gauges are selected, the arrow keys can be used to move the gauges by pixel (without snapping to the magnetic lines). Additionally the arrow keys can be used with Shift to align all gauges to the top, left, bottom or right border, together with Ctrl the size can be adjusted (**Ctrl+Right Arrow**, **Ctrl+Down Arrow**) or aligned and sized (**Ctrl+Left Arrow**, **Ctrl+Up Arrow**)
 
 ### [Ignore Hardware Triggers](#ignore-hardware-triggers)
 * WinDarab now allows to “ignore” / ”hide” lap triggers created by the recording hardware. To ignore a lap trigger simply use “Delete laptrigger” from the context menu / ribbon menu.
@@ -190,12 +196,16 @@ Following restrictions are still valid:
 ```
 ** If <LapIndex> is omitted, <dist> is the absolute distance value within the file. 
 ```
-    ValueAtDist(<channel>; <xdist>-10) returns the value 10m before the current position.
+    ValueAtDist(<channel>; <xdist>-10) 
+		returns the value 10m before the current position.
 ```
 ** If <LapIndex> is given, the <dist> argument is a lap distance value.
 ```
-    ValueAtDist(<channel>; 100; LapIndex) returns the value at position 100m of the current lap.
-    ValueAtDist(<channel>; lapdist; LapIndex-1) returns the value at the lap position but in the previous lap
+    ValueAtDist(<channel>; 100; LapIndex) 
+		returns the value at position 100m of the current lap.
+    
+	ValueAtDist(<channel>; lapdist; LapIndex-1) 
+		returns the value at the lap position but in the previous lap
 ```
 * The math function “ValueAtTime” was extended accordingly to ValueAtDist:
 ```
@@ -203,12 +213,16 @@ Following restrictions are still valid:
 ```
 ** If <LapIndex> is omitted, <time> is the absolute time value within the file. 
 ```
-    ValueAtTime(<channel>; <xtime>-10) returns the value 10sec before the current position.
+    ValueAtTime(<channel>; <xtime>-10) 
+		returns the value 10sec before the current position.
 ```
 ** If <LapIndex> is given, the <time> argument is a lap time value.
 ```
-    ValueAtDist(<channel>; 10; LapIndex) returns the value at position 10sec of the current lap.
-    ValueAtDist(<channel>; laptime; LapIndex-1) returns the value at the same laptime position but in the previous lap
+    ValueAtDist(<channel>; 10; LapIndex) 
+		returns the value at position 10sec of the current lap.
+		
+    ValueAtDist(<channel>; laptime; LapIndex-1) 
+		returns the value at the same laptime position but in the previous lap
 ```
 Note: WinDarab optimizes the following usage pattern of ValueAtTime
 ```
@@ -269,7 +283,7 @@ DetectEvent with 6 Arguments
     Inactive|Rising|Active|Falling; 
     &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;;  
     &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;
-)</code></pre>;
+)</code></pre>
 
 DetectEvent with 5 Arguments
 
