Corrected some Table of Contents stuff

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -7,11 +7,11 @@
   - [Copy as image](#copy-as-image)
   - [New Math Function Editor](#new-math-function-editor)
   - [Variables in Math Functions](#variables-in-math-functions)
-  - [COMAPI Can Create New Measurment Files](#comapi-can-create-new-measurment-files)
+  - [COMAPI Can Create New Measurement Files](#comapi-can-create-new-measurement-files)
   - [Outing Report Emphasized Values](#outing-report-emphasized-values)
   - [Math Functions Support 'NoValue'](#math-functions-support-novalue)
   - [x-y-Plot: Toggle between \<auto> and absolute x-y-z-axis limits](#x-y-plot-toggle-between-auto-and-absolute-x-y-z-axis-limits)
-  - [Worksheet items can be arranged](#worksheet-items-can-be-arranged)
+  - [Worksheet items can be automatically arranged](#worksheet-items-can-be-automatically-arranged)
   - [Math Inspector Improvement](#math-inspector-improvement)
   - [Automatic Y Axis](#automatic-y-axis)
   - [Less Restrictions on Linked Files](#less-restrictions-on-linked-files)
@@ -131,7 +131,7 @@ If (nmot >= 5000;
 wheelSpeedSum / WheelSpeedCount
 ```
 
-## COMAPI Can Create New Measurment Files
+## COMAPI Can Create New Measurement Files
 
 - A 3rd party application/plugin can use the UserDataFile class to create new measurement files with application generated channel data.
 - Files created with the new API are written in WinDarab file format v2 which is supported since WinDarab v7.6.
@@ -163,7 +163,7 @@ This channel will show only a signal, if nmot is larger than 6000 – anywhere e
 
 - Buttons were added in the ribbon (and hotkeys X, Y and Z) to toggle the x-, y- or z-axis limits between \<auto\> and the absolute value (current values of \<auto\>).
 
-## Worksheet items can be arranged
+## Worksheet items can be automatically arranged
 
 - In the “Windows” ribbon category we added the function “Tile controls” to tile all worksheet controls on the current worksheet.
 - The function is also available, if you open the context menu of the worksheet control caption/border.
@@ -195,18 +195,17 @@ This channel will show only a signal, if nmot is larger than 6000 – anywhere e
 
 ## Less Restrictions on Linked Files
 
-### New in WinDarab is the support to open different files as a linked file – even the recording configurations are different  <!-- omit in toc -->
-
-- All channels occurring in at least one of the member files is available in the linked file.
-- If a member file doesn’t contain a channel, the area in the linked file doesn’t contain any samples
+- New in WinDarab is the support to open different files as a linked file – even the recording configurations are different
+  - All channels occurring in at least one of the member files is available in the linked file.
+  - If a member file doesn’t contain a channel, the area in the linked file doesn’t contain any samples
 Following restrictions are still valid:
-- All channels have to use the same data format and bit size (e.g. unsigned 16-Bit)
-- All channels have to use the same quantization (e.g. offset/gain)
+  - All channels have to use the same data format and bit size (e.g. unsigned 16-Bit)
+  - All channels have to use the same quantization (e.g. offset/gain)
 
-### To complete the support, the file extract functions were refactored  <!-- omit in toc -->
+- To complete the support, the file extract functions were refactored
 
-- In case of a linked file, file extract supports the creation of additional timelines which are required to export linked channels correctly, if some member channels are missing.
-- The export functions are much faster now because they use multiple threads to collect the data to export.
+  - In case of a linked file, file extract supports the creation of additional timelines which are required to export linked channels correctly, if some member channels are missing.
+  - The export functions are much faster now because they use multiple threads to collect the data to export.
 
 ## Instrument Panel Improvement
 
@@ -234,7 +233,7 @@ Following restrictions are still valid:
 ValueAtDist(<channel>; <dist> [; <LapIndex>])
 ```
 
-- If \<LapIndex> is omitted, \<dist> is the absolute distance value within the file. 
+- If \<LapIndex> is omitted, \<dist> is the absolute distance value within the file.
 
 ```
 ValueAtDist(<channel>; <xdist>-10)
@@ -269,7 +268,7 @@ returns the value 10sec before the current position.
 ```
 ValueAtDist(<channel>; 10; LapIndex)
 returns the value at position 10sec of the current lap.
-		
+
 ValueAtDist(<channel>; laptime; LapIndex-1)
 returns the value at the same laptime position but in the previous lap
 ```
@@ -321,7 +320,7 @@ Now setupsheets can also be configured for telemetry streams. The setupsheet fil
 Alternatively you can use the “Hide” context menu in the oscilloscope (“H” key).
 - What happens, if an overlay is hidden:
   - The oscilloscope hide all channel of hidden overlays
-  - The trackmap doesn’t show the position of the car. 
+  - The trackmap doesn’t show the position of the car.
   - All analysis windows hide the evaluation results of hidden overlays (except LapAnalysis)
   - As long as an overlay is hidden most calculations for the attached files are stopped/disabled.
 
@@ -342,7 +341,7 @@ Hereby the first keyword argument (Inactive/Rising|Active|Falling) is always opt
 DetectEvent with 6 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
+    Inactive|Rising|Active|Falling;
     &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;;  
     &lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;
 )</code></pre>
@@ -350,31 +349,31 @@ DetectEvent with 6 Arguments
 DetectEvent with 5 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;; 
+    Inactive|Rising|Active|Falling;
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; &lt;BeginDelay&gt;;
     <del>&lt;EndCondition&gt;</del>; &lt;EndDuration&gt;; &lt;EndDelay&gt;
 )</code></pre>
 
 DetectEvent with 4 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; 
+    Inactive|Rising|Active|Falling;
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>;
     &lt;EndCondition&gt;; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>
 )</code></pre>
 
 DetectEvent with 3 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
-    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>; 
+    Inactive|Rising|Active|Falling;
+    &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;</del>;
     <del>&lt;EndCondition&gt;</del>; &lt;EndDuration&gt;; <del>&lt;EndDelay&gt;</del>
 )</code></pre>
 
 DetectEvent with 2 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
+    Inactive|Rising|Active|Falling;
     &lt;BeginCondition&gt;; &lt;BeginDuration&gt;; <del>&lt;BeginDelay&gt;; </del>
     <del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
 )</code></pre>
@@ -382,11 +381,10 @@ DetectEvent with 2 Arguments
 DetectEvent with 1 Arguments
 
 <pre><code>DetectEvent(
-    Inactive|Rising|Active|Falling; 
+    Inactive|Rising|Active|Falling;
     &lt;BeginCondition&gt;; <del>&lt;BeginDuration&gt;; &lt;BeginDelay&gt;; </del>
     <del>&lt;EndCondition&gt;; &lt;EndDuration&gt;; &lt;EndDelay&gt;</del>
 )</code></pre>
-
 
 ## Flow Chart: output can be virtual channels
 
