Add some example images to the virtual channels from Flow charts section

--- a/Documentation/7.7 Changes.md
+++ b/Documentation/7.7 Changes.md
@@ -393,3 +393,19 @@ DetectEvent with 1 Arguments
 Note: Be aware that persistent channels are replaced each time the flow is executed!
 - The name of the column is used as the name of the virtual channel and the name of the table is used as the data source.
 Nevertheless to prevent name conflicts we encourage the use of „unique names“. WinDarab will resolve channel name conflicts**  nevertheless depending on the execution order of Flow Charts the name conflicts aren’t always resolved the same way!
+
+Setup of the Output Table:
+
+<p align="center">
+<img src="images/Flow Chart - Virtual Channel Setup.jpg">
+</p>
+
+Example Flow chart (calculate the average engine rpm (nmot) above 6000 rpm):
+<p align="center">
+<img src="images/Flow Chart - Flow.jpg">
+</p>
+
+Example Output (oscilloscope and XY Plot):
+<p align="center">
+<img src="images/Flow Chart - Virtual Channel Visualisation.jpg">
+</p>
