Add relevant timestamp description

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -1,6 +1,7 @@
 # WinDarab 7.7 Changes
 
 - [WinDarab 7.7 Changes](#windarab-77-changes)
+  - [New Math Channel Option "Include relevant Timestamps"](#new-math-channel-option-include-relevant-timestamps)
   - [Show Extremas](#show-extremas)
   - [New Colors](#new-colors)
   - [.mf4 Support](#mf4-support)
@@ -24,6 +25,13 @@
   - [Hide Overlay](#hide-overlay)
   - [Detect Event Supports Multiple Overloads](#detect-event-supports-multiple-overloads)
   - [Flow Chart: output can be virtual channels](#flow-chart-output-can-be-virtual-channels)
+
+## New Math Channel Option "Include relevant Timestamps"
+
+Some math channels work better if relevant timestamps are included to the math function. E.g. functions like “LapSigma” reset their result if a laptrigger is passed. However, values can be incorrect at the laptrigger boundary if this timestamp (exactly at laptrigger) isn’t included in the selected timeline.
+This new option ensures that the timestamps of the laptriggers are included in the math channels timeline and the math channel has a value at these positions.
+
+Note: The used math functions in a math formula control if relevant timestamps exist and which they are (an example is LapSigma which adds the timestamps of the laptriggers to the math channel).
 
 ## Show Extremas
 
