Updated 7.7 changes to 7.7.43

--- a/7.7 Changes.md
+++ b/7.7 Changes.md
@@ -1,6 +1,9 @@
 # WinDarab 7.7 Changes
 
 - [WinDarab 7.7 Changes](#windarab-77-changes)
+  - [Text/ASCII Import](#textascii-import)
+  - [Support for File Compression](#support-for-file-compression)
+  - [Smooth Scrolling Settings](#smooth-scrolling-settings)
   - [New Math Channel Option "Include relevant Timestamps"](#new-math-channel-option-include-relevant-timestamps)
   - [Show Extremas](#show-extremas)
   - [New Colors](#new-colors)
@@ -25,6 +28,20 @@
   - [Hide Overlay](#hide-overlay)
   - [Detect Event Supports Multiple Overloads](#detect-event-supports-multiple-overloads)
   - [Flow Chart: output can be virtual channels](#flow-chart-output-can-be-virtual-channels)
+
+## Text/ASCII Import
+
+Starting in WinDarab 7.7.38 we have added additional support for variations of text files to import. Most Tab, Comma, and Semicolon delimited files are detected.
+Note: The files must contain a *time* or *xtime* channel.
+
+## Support for File Compression
+
+WinDarab 7.8 by default generates compressed data files. (~80% reduction in disk space).
+WinDarab 7.7.36+ supports opening these files.
+
+## Smooth Scrolling Settings
+
+Smooth scrolling setting is now available in the *Tools &rarr; Program* options
 
 ## New Math Channel Option "Include relevant Timestamps"
 
@@ -418,3 +435,4 @@ Example Output (oscilloscope and XY Plot):
 <p align="center">
 <img src="images/Flow Chart - Virtual Channel Visualisation.jpg">
 </p>
+
