Create a table of contents

--- a/7.8 Changes.md
+++ b/7.8 Changes.md
@@ -1,5 +1,17 @@
 # WinDarab 7.8 Changes
 
+- [WinDarab 7.8 Changes](#windarab-78-changes)
+  - [Outing Report - Virtual Channels](#outing-report---virtual-channels)
+  - [Oscilloscope - Quick Expand an area](#oscilloscope---quick-expand-an-area)
+  - [Calculation of Lap Statistics Changed](#calculation-of-lap-statistics-changed)
+  - [File Compression](#file-compression)
+  - [WinDarab supports opening WinDarab files with multilogging option](#windarab-supports-opening-windarab-files-with-multilogging-option)
+  - [BMS2Api - Trackmap/Segments support added](#bms2api---trackmapsegments-support-added)
+  - [New features added to lap- and segment-based math functions](#new-features-added-to-lap--and-segment-based-math-functions)
+  - [The caption of all views can be edited](#the-caption-of-all-views-can-be-edited)
+  - [Math Channel - Explicit control of interpolation](#math-channel---explicit-control-of-interpolation)
+  - [Telemetry - Refactoring the handling of disconnect/connect from/to WDServer](#telemetry---refactoring-the-handling-of-disconnectconnect-fromto-wdserver)
+  - [Oscilloscope - Settings dialog is coming back](#oscilloscope---settings-dialog-is-coming-back)
 
 ## Outing Report - Virtual Channels
 
@@ -10,7 +22,7 @@ For each column the outing report creates:
 - A virtual channel with lap-based results
 - A virtual channel(s) with segment-based results, if racetrack segments are evaluated
 
-### Important note:
+__Important:__
 If outing report is configured to evaluate segments, the “lap” row shows the maximum or minimum of the single segment values.
 The lap-based virtual channels contains the statistic value over the whole lap, which is not the same as the “lap value” in the outing report table!
 
@@ -53,7 +65,7 @@ Starting with WinDarab v7.08.003 WinDarab files can use a format extension allow
 <img src="images/Settings%20Dialog%20-%20File%20Compression.png">
 </p>
 
-### Important
+__Important:__
 
 - Starting with WinDarab v7.08.003 files can take advantage of channel data compression.
 - Both, WinDarab and DataLoggerImport, have options in their program settings to DISABLE data compression.
@@ -94,7 +106,7 @@ LapAve(<channel>)-> LapAve(<expression>[;<condition>])
 
 Only values are taken into account, if the condition evaluates to true.
 
-### Note:
+__Note:__
 Because these math function have to evaluate their subexpressions independently from the calculation of the math channel, the use of variables within the arguments is not allowed!
 
 ## The caption of all views can be edited
@@ -133,7 +145,7 @@ This can be an issue in the reliability of math functions.
 
 - After customers asked for the oscilloscope settings dialog, a new implementation of the former dialog is started.
 
-### Note 
+__Note:__
 
 - The dialog is still “under work” and provided for testing!
 - Digital/Analog/Dots does not appear in this dialog &rarr; it is a *Channel* setting not an *Oscilloscope* setting!
